[package]
name = "zkchan-tx"
version = "0.1.0"
authors = ["Bolt Labs, Inc <info@boltlabs.io>"]
description = "transaction builder for zkChannels (formerly Blind Off-chain Lightweight Transactions - BOLT)"
keywords = ["bitcoin", "zcash", "cryptocurrency"]
readme = "README.md"
homepage = "https://github.com/boltlabs-inc/zkchan-tx"
repository = "https://github.com/boltlabs-inc/zkchan-tx"
license = "MIT License"
edition = "2018"

[dependencies]
hex = "0.3.2"
sha2 = { version = "0.8", default-features = false }
serde_derive = "1.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["std", "hmac"] }
wagyu-model = { git = "https://github.com/jakinyele/wagyu" }
wagyu-bitcoin = { git = "https://github.com/jakinyele/wagyu" }
wagyu-zcash = { git = "https://github.com/jakinyele/wagyu" }
